--- a/notebooks/6_original_i_hope.ipynb
+++ b/notebooks/6_original_i_hope.ipynb
@@ -101,9 +101,9 @@
     "from cellsaw.merge.diffusion import kernel\n",
     "\n",
     "# integrate \n",
-    "data = ssdata[0][:12]\n",
+    "data = ssdata[0]\n",
     "cs.preprocess.annotate_genescore2(data,selector = 'cell_ranger',  normrow = True, log = True)\n",
-    "me = merg.Merge(data,umaps=[],oldcut=False, pca = 40)\n",
+    "me = merg.Merge(data[0],umaps=[],oldcut=False, pca = 40)\n",
     "dist = kernel.linear_assignment_integrate(me.projections[1], showtime = True)"
    ]
   },
@@ -176,9 +176,7 @@
    "id": "6a19eeb6-1044-42c7-af13-5cd26a00485b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import ubergauss.tools as ug"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -193,11 +191,15 @@
    "execution_count": null,
    "id": "f6d6af76-c49a-4a5c-b5a4-62d6bb76479f",
    "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
    "source": [
     "from sklearn.metrics import  silhouette_score\n",
+    "import ubergauss.tools as ug\n",
     "from natto.out.quality import clust as nnpurity \n",
     "from cellsaw.merge.diffusion import kernel\n",
     "from cellsaw import merge as merg\n",
@@ -212,20 +214,20 @@
     "\n",
     "def mnn(merge):\n",
     "    mnn = sc.external.pp.mnn_correct(*merge.data, n_jobs = None)\n",
-    "    X = umap.UMAP(n_components = 10).fit_transform(mnn[0].X)\n",
+    "    X = umap.UMAP(n_components = 10,n_jobs =1).fit_transform(mnn[0].X)\n",
     "    return X , \"MNN\", None\n",
     "\n",
     "def mymethod(merge):\n",
-    "    data = merge.projections[2]\n",
-    "    dist = kernel.linear_assignment_integrate(data)\n",
-    "    sim = kernel.distmatrixumap(data,dist,components = 19)\n",
+    "    data = merge.projections[1]\n",
+    "    dist = kernel.linear_assignment_integrate(data )\n",
+    "    sim = kernel.distmatrixumap(data,dist,components = 10)\n",
     "    return  sim, \"lsa_integration\",dist\n",
     "\n",
     "methods = [mnn,mymethod]\n",
     "\n",
     "def myscore(x):\n",
     "    start = time.time()\n",
-    "    method, rownorm, item, pp = x\n",
+    "    method, rownorm, item, pp, sgenes  = x\n",
     "    batch_,label = batch[item], typ[item]\n",
     "    data = [z.copy() for z in ssdata[item]]\n",
     "    \n",
@@ -240,7 +242,7 @@
     "        [ sc.pp.normalize_total(d,1e4) for d in data]\n",
     "    \n",
     "    [sc.pp.log1p(d) for d in data]\n",
-    "    me = merg.Merge(data,umaps=[20],oldcut=False, pca = 40, selectgenes = 2000)\n",
+    "    me = merg.Merge(data,umaps=[],oldcut=False, pca = 40, selectgenes = sgenes)\n",
     "    X ,methname, di  = method(me)\n",
     "    y = [ x   for a in me.data for x in a.obs[label] ]\n",
     "    r =  {\"method\":methname,\"dataset\":item,\"normrow\":rownorm,'pp':pp,'time':time.time()-start} \n",
@@ -251,7 +253,8 @@
     "        a = dict(a)\n",
     "        a.update(b)\n",
     "        return a\n",
-    "    if True:\n",
+    "    \n",
+    "    if False:\n",
     "        data = me.projections[2]\n",
     "        X2 = kernel.distmatrixumap(data,dist,components = 2)\n",
     "        plt.scatter(X2[:,0],X2[:,1], y)\n",
@@ -262,14 +265,14 @@
     "    return s,p \n",
     "\n",
     "\n",
-    "myscore((mymethod,True,0,'cell_ranger'))\n",
+    "#myscore((mymethod,True,0,'cell_ranger'))\n",
     "\n",
-    "'''\n",
-    "res_newscoring = ug.xmap(myscore,[ (method,True,item,pp) for method in methods\n",
-    "                                                    #  for rownorm in [True,False] \n",
+    "res_newscoring = ug.xmap(myscore,\n",
+    "                         [ (method,True,item,pp,2000) for method in methods\n",
     "                                                      for item in Range(zedata)\n",
-    "                                                      for pp in ['cell_ranger']])\n",
-    "'''\n",
+    "                                                      for pp in ['cell_ranger']]+\n",
+    "                         [ (mymethod,True,item,'cell_ranger',3000) \n",
+    "                                                      for item in Range(zedata)])\n",
     "\n"
    ]
   },
@@ -312,6 +315,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "868c5d8b-8098-48e7-9797-7ff6e36778cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for d in [a for aa in res_newscoring for a in aa][16:]:\n",
+    "    d['method'] = \"lsa3000\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "16fb37b2-3190-420b-87cc-7255705856ff",
    "metadata": {},
    "outputs": [],
@@ -319,79 +333,16 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "from matplotlib import pyplot as plt\n",
-    "#df = pd.DataFrame([a for aa in res for a in aa])\n",
-    "# df2 = pd.DataFrame([a for aa in res_newscoring for a in aa])\n",
-    "# sns.pairplot(df)\n",
-    "p = df2[df2.metric == 'purity']\n",
-    "s = df2[df2.metric == 'silhouette']\n",
-    "\n",
-    "sns.boxplot(data = p, y= 'score', x = \"dataset\", hue = 'method').set(title='NG_datasets')\n",
-    "plt.show()\n",
-    "sns.boxplot(data = p, y= 'score', x='method').set(title='NG_CMP')\n",
-    "plt.show()\n",
-    "sns.boxplot(data = s, y= 'score', x = \"dataset\", hue = 'method').set(title='NG_silouette')\n",
-    "plt.show()\n",
-    "sns.boxplot(data = p, y= 'score', x = \"pp\", hue = 'method').set(title='NG_pp')\n",
-    "plt.show()\n",
-    "sns.boxplot(data = p, y= 'score', x = \"normrow\", hue = 'method').set(title='NG_normrow')\n",
-    "plt.show()\n",
-    "sns.boxplot(data = s, y= 'score', x = \"normrow\", hue = 'method').set(title='NG_normrow_sil')\n",
-    "# so we do log1p and \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92281e9c-1881-4789-bd96-83b13c55646b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "from matplotlib import pyplot as plt\n",
-    "#df = pd.DataFrame([a for aa in res for a in aa])\n",
     "df2 = pd.DataFrame([a for aa in res_newscoring for a in aa])\n",
-    "# sns.pairplot(df)\n",
+    "\n",
     "p = df2[df2.metric == 'purity']\n",
     "s = df2[df2.metric == 'silhouette']\n",
     "\n",
-    "sns.boxplot(data = p, y= 'score', x = \"dataset\", hue = 'method').set(title='NG_datasets')\n",
+    "sns.boxplot(data = p, y= 'score', x='method').set(title='acc')\n",
     "plt.show()\n",
-    "sns.boxplot(data = p, y= 'score', x='method').set(title='NG_CMP')\n",
+    "sns.boxplot(data = s, y= 'score', x='method').set(title='silhou')\n",
     "plt.show()\n",
-    "sns.boxplot(data = s, y= 'score', x = \"dataset\", hue = 'method').set(title='NG_silouette')\n",
-    "plt.show()\n",
-    "sns.boxplot(data = p, y= 'score', x = \"pp\", hue = 'method').set(title='NG_pp')\n",
-    "plt.show()\n",
-    "sns.boxplot(data = p, y= 'score', x = \"normrow\", hue = 'method').set(title='NG_normrow')\n",
-    "# so we do log1p and \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa3331f1-5441-41df-b242-04176daafac6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "from matplotlib import pyplot as plt\n",
-    "df = pd.DataFrame([a for aa in res for a in aa])\n",
-    "\n",
-    "# sns.pairplot(df)\n",
-    "p = df[df.metric == 'purity']\n",
-    "s = df[df.metric == 'silhouette']\n",
-    "\n",
-    "sns.boxplot(data = p, y= 'score', x = \"dataset\", hue = 'method').set(title='oldgenes_datasets')\n",
-    "plt.show()\n",
-    "sns.boxplot(data = p, y= 'score', x='method').set(title='oldgenes_CMP')\n",
-    "plt.show()\n",
-    "sns.boxplot(data = s, y= 'score', x = \"dataset\", hue = 'method').set(title='oldgenes_silouette')\n",
-    "# so we do log1p and \n",
-    "\n",
-    "\n"
+    "# so we do log1p and \n"
    ]
   },
   {
@@ -419,17 +370,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f065b08-4245-4eed-a788-a82ce5d12f06",
+   "cell_type": "markdown",
+   "id": "b294a08b-61ba-448c-9a46-10cd0c2417b8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# comparison plots  (also f3 from mnn paper)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4f994230-f39c-4c57-a0bc-35ca8f10f9ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cellsaw import preprocess as pp \n",
+    "from cellsaw import merge as merg\n",
+    "from cellsaw import draw \n",
+    "from cellsaw import util\n",
+    "import umap\n",
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "def pcaplot(adata):\n",
+    "    d2 = PCA().fit_transform(adata.X) \n",
+    "    d2split =  [d2[adata.obs['batch']==i].copy() for i in adata.obs['batch'].unique()]\n",
+    "    labels = [a.obs['celltype'] for a in me.data]\n",
+    "    \n",
+    "    def scatter(i,m):\n",
+    "        x = d2split[i]\n",
+    "        y = labels[i]\n",
+    "        plt.scatter(x[:,0],x[:,1],c=y,marker = m)\n",
+    "    scatter(0,\"o\")\n",
+    "    scatter(1,\"x\")\n",
+    "    plt.show()\n",
+    "\n",
+    "pcaplot(mnn[0])\n",
+    "# combat, uncorrected, ours (mnn also)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b61f049-d072-4034-b9f7-2fa0a42d065c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +488,7 @@
    "id": "64a8c5a1-c609-42d8-ab48-1dac09b8e202",
    "metadata": {},
    "source": [
-    "# MDS , UMAP CUSTOM GRAPHS, SILOUETTE SCORE"
+    "# PLAY AROUND: MDS, UMAP CUSTOM GRAPHS, SILOUETTE SCORE"
    ]
   },
   {
