--- a/notebooks/8_opti_projection.ipynb
+++ b/notebooks/8_opti_projection.ipynb
@@ -39,6 +39,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dabf2874-3e8b-4119-8e54-cba37e997558",
+   "metadata": {},
+   "source": [
+    "# LOAD DATA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3efe55cd-5426-4431-b5a9-5b2705a21674",
@@ -60,17 +68,16 @@
     "ssdata = [[samplecopy(i,750,31442)  for i in series]  for series in zedata] \n",
     "[cs.preprocess.annotate_genescore2(data,selector = 'cell_ranger', normrow = True, log = True) for data in ssdata]\n",
     "[[ sc.pp.normalize_total(d,1e4) for d in data] for data in ssdata]\n",
-    "[[sc.pp.log1p(d) for d in data] for data  in ssdata]"
+    "[[sc.pp.log1p(d) for d in data] for data  in ssdata]\n",
+    "pass"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a19eeb6-1044-42c7-af13-5cd26a00485b",
+   "cell_type": "markdown",
+   "id": "92a96ac4-a83d-4361-be2d-6f8746035f29",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import ubergauss.tools as ug"
+    "# optimize integration"
    ]
   },
   {
@@ -83,6 +90,7 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import  silhouette_score\n",
+    "import ubergauss.tools as ug\n",
     "from natto.out.quality import clust as nnpurity \n",
     "from cellsaw.merge.diffusion import kernel\n",
     "from cellsaw import merge as merg\n",
@@ -107,8 +115,8 @@
     "                                               scaling_threshold = scalecon)\n",
     "    sim = kernel.distmatrixumap(data,dist,components = comp)\n",
     "    y = [ x for a in merge.data for x in a.obs[label] ]\n",
-    "    pur = nnpurity(sim,y)+\n",
-    "    return pur \n",
+    "    score = nnpurity(sim,y)+2*silhouette_score(sim,y)\n",
+    "    return score\n",
     "\n",
     "def runall(params):\n",
     "    return -np.mean(ug.xmap(lambda x:evalp(x,**params),Range(ssdata)))\n",
@@ -122,9 +130,6 @@
     "    'scal' : scope.int(hp.quniform('scal',1,5,1)),\n",
     "    'comp' : scope.int(hp.quniform('comp',4,30,1)),\n",
     "    'umaps' : scope.int(hp.quniform('umaps',0,20,5))}\n",
-    "\n",
-    "\n",
-    "\n",
     "space2 = { \n",
     "    'neighs' : 20,\n",
     "    'conns' : 2,\n",
@@ -135,12 +140,185 @@
     "    'outl' : hp.uniform('outl',.5,.95)\n",
     "}\n",
     "\n",
-    "# trials2 = Trials()\n",
+    "space3 = { \n",
+    "    'neighs' : scope.int(hp.quniform('neighs',3,25,1)),\n",
+    "    'conns' : scope.int(hp.quniform('conns',1,5,1)),\n",
+    "    'scal' : scope.int(hp.quniform('scal',1,5,1)),\n",
+    "    'comp' : scope.int(hp.quniform('comp',4,30,1)),\n",
+    "    'umaps' : scope.int(hp.quniform('umaps',0,20,5)),\n",
+    "    'scalecon' : hp.uniform('scalecon',.05,.95),\n",
+    "    'outl' : hp.uniform('outl',.5,.95)\n",
+    "}\n",
+    "\n",
+    "# {'comp': 9.0, 'conns': 1.0, 'neighs': 16.0, 'outl': 0.8079195869285946, 'scal': 2.0, 'scalecon': 0.9365341951145691, 'umaps': 0.0}\n",
+    "trials3 = Trials()\n",
     "best = fmin(fn=runall, algo=tpe.suggest,\n",
-    "            trials = trials2,\n",
-    "            space = space2, \n",
+    "            trials = trials3,\n",
+    "            space = space3, \n",
     "            max_evals=40) \n",
     "print(best)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "889f9556-cbb8-418e-b60a-88d522dc3d9d",
+   "metadata": {},
+   "source": [
+    "# optimize projection\n",
+    "\n",
+    "umap is very slow lets see what good alternatives are"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7d6ef1c-b7a2-4dc2-8851-08b167ce92d8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import  silhouette_score\n",
+    "import ubergauss.tools as ug\n",
+    "from natto.out.quality import clust as nnpurity \n",
+    "from cellsaw.merge.diffusion import kernel\n",
+    "from cellsaw import merge as merg\n",
+    "import cellsaw as cs\n",
+    "import mnnpy\n",
+    "import umap\n",
+    "from sklearn import manifold as mf\n",
+    "\n",
+    "\n",
+    "# first we get the integration data:\n",
+    "def evalp(x,neighs=5,conns=1, scal=1,comp=5,umaps = 0,outl = .75, scalecon = .25):\n",
+    "    batch_,label = batch[x], typ[x]\n",
+    "    data = [z.copy() for z in ssdata[x]]\n",
+    "    if umaps == 0:\n",
+    "        merge = merg.Merge(data,umaps=[],oldcut=False, pca = 40)\n",
+    "        data = merge.projections[1]\n",
+    "    else:\n",
+    "        merge = merg.Merge(data,umaps=[umaps],oldcut=False, pca  = 40)\n",
+    "        data = merge.projections[2]\n",
+    "    dist = kernel.linear_assignment_integrate(data,\n",
+    "                                              intra_neigh = neighs, \n",
+    "                                              inter_neigh = conns, \n",
+    "                                              scaling_num_neighbors = scal,\n",
+    "                                               outlier_threshold = outl,\n",
+    "                                               scaling_threshold = scalecon)\n",
+    "    y = [ x for a in merge.data for x in a.obs[label] ]\n",
+    "    return y, dist, data\n",
+    "\n",
+    "params =  { 'conns': 1, 'neighs': 16, 'outl': 0.8079195869285946, 'scal': 2, \n",
+    "           'scalecon': 0.9365341951145691, 'umaps': 0}\n",
+    "data = ug.xmap(lambda x:evalp(x,**params),Range(ssdata))\n",
+    "\n",
+    "# then we set up the new optimization:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f5a4983-f778-4270-82f7-1beba9d231c5",
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "import time\n",
+    "methods = []\n",
+    "\n",
+    "def umap(dist, comp, data):\n",
+    "    return kernel.distmatrixumap(data,dist,components = 5)\n",
+    "methods.append(umap)\n",
+    "\n",
+    "'''\n",
+    "manifold.Isomap(*[, n_neighbors, radius, ...])\n",
+    "manifold.LocallyLinearEmbedding(*[, ...]) NO PRECOMP\n",
+    "manifold.MDS([n_components, metric, n_init, ...])\n",
+    "manifold.SpectralEmbedding([n_components, ...])\n",
+    "manifold.TSNE([n_components, perplexity, ...])\n",
+    "manifold.locally_linear_embedding(X, *, ...)\n",
+    "manifold.spectral_embedding(adjacency, *[, ...])\n",
+    "manifold.trustworthiness(\n",
+    "'''\n",
+    "\n",
+    "def isomap(dist, comp, data):\n",
+    "    iso = mf.Isomap(n_neighbors = comp,n_components=5, metric = 'precomputed' )\n",
+    "    return iso.fit_transform(dist)#kernel.distmatrixumap(data,dist,components = comp)\n",
+    "methods.append(isomap)\n",
+    "\n",
+    "def spectral(dist, comp, data):\n",
+    "    return mf.SpectralEmbedding(n_components = 5,n_neighbors = comp,affinity = 'precomputed').fit_transform(dist)#data,dist,components = comp)\n",
+    "methods.append(spectral)\n",
+    "\n",
+    "def MDS(dist, comp, data):\n",
+    "    return mf.MDS(n_components = 5, metric =False, dissimilarity = \"precomputed\").fit_transform(dist.todense())# ,dist,components = comp)\n",
+    "methods.append(MDS)\n",
+    "\n",
+    "def TSNE(dist, comp, data):\n",
+    "    return mf.TSNE(n_components = 5,early_exaggeration = comp,method='exact', metric = \"precomputed\").fit_transform(dist.todense())\n",
+    "methods.append(TSNE)\n",
+    "\n",
+    "def evalpp(arg):\n",
+    "    x,method,val = arg\n",
+    "    s = time.time()\n",
+    "    y,dist, pca = data[x]\n",
+    "    # sim = methods[method](dist, val, pca)\n",
+    "    try:\n",
+    "        sim = methods[method](dist, val, pca)\n",
+    "    except:\n",
+    "        return 0,0,0,0,0\n",
+    "    \n",
+    "    return nnpurity(sim,y)+2*silhouette_score(sim,y),time.time()-s, x, method, val\n",
+    "\n",
+    "'''\n",
+    "def runall(params):\n",
+    "    return -np.mean(ug.xmap(lambda x:evalpp(x,**params),Range(data)))\n",
+    "    \n",
+    "import ubergauss.hyperopt as uo\n",
+    "space = [f'method 0 {len(methods)-1} 1','val 5 20 1']\n",
+    "ship = uo.spaceship(space)\n",
+    "trials = uo.Trials()\n",
+    "print(\"start\")\n",
+    "best = uo.fmin(fn=runall, algo=uo.tpe.suggest,\n",
+    "            trials = trials,\n",
+    "            space = ship.space, \n",
+    "            max_evals=40) \n",
+    "\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "runs = [(ds,meth,val) for ds in Range(data) for meth in Range(methods) for val in range(5,20)]\n",
+    "# evalpp(runs[0])\n",
+    "r = ug.xmap(evalpp,runs )\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9a73519-0169-4350-b0ad-db2bdbab1035",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43937be9-9f83-41ce-ad7d-06526de70970",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "z = pd.DataFrame(r, columns='score time ds method val'.split())"
    ]
   },
   {
@@ -150,296 +328,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(best)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "433d9249-a665-4701-83d2-fe25807e56d4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "297ce439-4eb4-4bc4-a84a-5352599cf767",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46428411-cd80-4871-ac5d-33d6b06b7c0b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#ug.dumpfile(res,'mydata.delme')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5fbf9d04-ff14-4ef7-bda9-5ece968a5f88",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16fb37b2-3190-420b-87cc-7255705856ff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92281e9c-1881-4789-bd96-83b13c55646b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
     "import seaborn as sns\n",
-    "from matplotlib import pyplot as plt\n",
-    "#df = pd.DataFrame([a for aa in res for a in aa])\n",
-    "df2 = pd.DataFrame([a for aa in res_newscoring for a in aa])\n",
-    "# sns.pairplot(df)\n",
-    "p = df2[df2.metric == 'purity']\n",
-    "s = df2[df2.metric == 'silhouette']\n",
-    "\n",
-    "sns.boxplot(data = p, y= 'score', x = \"dataset\", hue = 'method').set(title='NG_datasets')\n",
-    "plt.show()\n",
-    "sns.boxplot(data = p, y= 'score', x='method').set(title='NG_CMP')\n",
-    "plt.show()\n",
-    "sns.boxplot(data = s, y= 'score', x = \"dataset\", hue = 'method').set(title='NG_silouette')\n",
-    "plt.show()\n",
-    "sns.boxplot(data = p, y= 'score', x = \"pp\", hue = 'method').set(title='NG_pp')\n",
-    "plt.show()\n",
-    "sns.boxplot(data = p, y= 'score', x = \"normrow\", hue = 'method').set(title='NG_normrow')\n",
-    "# so we do log1p and \n",
-    "\n"
+    "sns.pairplot(z, hue = 'ds')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa3331f1-5441-41df-b242-04176daafac6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "from matplotlib import pyplot as plt\n",
-    "df = pd.DataFrame([a for aa in res for a in aa])\n",
-    "\n",
-    "# sns.pairplot(df)\n",
-    "p = df[df.metric == 'purity']\n",
-    "s = df[df.metric == 'silhouette']\n",
-    "\n",
-    "sns.boxplot(data = p, y= 'score', x = \"dataset\", hue = 'method').set(title='oldgenes_datasets')\n",
-    "plt.show()\n",
-    "sns.boxplot(data = p, y= 'score', x='method').set(title='oldgenes_CMP')\n",
-    "plt.show()\n",
-    "sns.boxplot(data = s, y= 'score', x = \"dataset\", hue = 'method').set(title='oldgenes_silouette')\n",
-    "# so we do log1p and \n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "167268f8-451d-425b-94db-940a65ba193d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from cellsaw import merge as merg\n",
-    "from cellsaw import preprocess as pp \n",
-    "pp.annotate_genescore(zz,selector = 'cell_ranger')\n",
-    "me = merg.Merge(zz,umaps=[])\n",
-    "zz=me.data "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97a40ca4-c181-4dbf-8ff1-f1f960659955",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mnn = sc.external.pp.mnn_correct(*zz, n_jobs = 30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f065b08-4245-4eed-a788-a82ce5d12f06",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f994230-f39c-4c57-a0bc-35ca8f10f9ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from cellsaw import preprocess as pp \n",
-    "from cellsaw import merge as merg\n",
-    "from cellsaw import draw \n",
-    "from cellsaw import util\n",
-    "import umap\n",
-    "\n",
-    "from natto.out.quality import clust as nnpurity \n",
-    "def sad():\n",
-    "    d2 = umap.UMAP().fit_transform(mnn[0].X) \n",
-    "    d2split =  [d2[mnn[0].obs['batch']==i].copy() for i in mnn[0].obs['batch'].unique()]\n",
-    "    me.d2 = d2split\n",
-    "    labels = [a.obs['celltype'] for a in me.data]\n",
-    "    #me.plot(labels)\n",
-    "    mixlabels=[a for aa in labels for a in aa]\n",
-    "    me.plot(labels, mkmix= True, mixlabels = mixlabels)\n",
-    "    print(\"ACC\",nnpurity(mnn[0].X,mixlabels))\n",
-    "sad()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e5b1756-4d2b-46d8-b0f3-14502b169139",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "from cellsaw.merge.diffusion import kernel\n",
-    "data = me.projections[1]\n",
-    "dist = kernel.linear_assignment_integrate(data,intra_neigh = 10, inter_neigh = 20, scaling_num_neighbors = 3)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20c2d298-fa5b-41f9-bad3-8543329c895e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "983e82bc-9f2b-4483-8f89-5eb6f3a4e57c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mds():\n",
-    "    d2 = kernel.distmatrixumap(data,dist)\n",
-    "    d2split = np.split(d2,np.add.accumulate(Map(len,data)))\n",
-    "    me.d2 = d2split\n",
-    "    labels = [a.obs['celltype'] for a in me.data]\n",
-    "    mixlabels=[a for aa in labels for a in aa]\n",
-    "    me.plot(labels, mkmix= True, mixlabels = mixlabels)\n",
-    "    print(\"ACC\",nnpurity(d2,mixlabels))\n",
-    "    \n",
-    "mds()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20d28ac2-da12-4656-8b53-97b8df854345",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5bc03f1-841d-452c-b38b-124a93e63864",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.datasets import make_blobs\n",
-    "import seaborn as sns\n",
-    "\n",
-    "def plot(mydata):\n",
-    "    for d in mydata:\n",
-    "        plt.scatter(d[:,0],d[:,1])\n",
-    "    plt.show()\n",
-    "    \n",
-    "mydata = [make_blobs(n_samples = 50)[0] for i in range(2)]\n",
-    "plot(mydata)\n",
-    "\n",
-    "\n",
-    "dist = kernel.linear_assignment_integrate(mydata, intraneigh=3)\n",
-    "sns.heatmap(dist)\n",
-    "plt.show()\n",
-    "\n",
-    "d2 = MDS(dissimilarity = 'precomputed',metric = False).fit_transform(dist)\n",
-    "d2 = np.split(d2,np.add.accumulate(Map(len,mydata)))\n",
-    "plot(d2)\n",
-    "\n",
-    "d2 = kernel.distmatrixumap(mydata,dist)\n",
-    "d2 = np.split(d2,np.add.accumulate(Map(len,mydata)))\n",
-    "plot(d2)\n",
-    "\n",
-    "\n",
-    "# TODO\n",
-    "# networkx from numpoy array\n",
-    "# kamada_kawai_layout(G, dist=None, pos=None, weight='weight', scale=1, center=None, dim=2)\n",
-    "# also try spectral layout "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07c50fc6-a76b-4344-9c1b-8cf6a6478dc4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pynndescent import NNDescent\n",
-    "pyNNDobject = NNDescent(np.array([[1],[2],[3]]), metric='euclidean', random_state=1337)\n",
-    "pyNNDobject._neighbor_graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f74e4322-2de7-453c-add4-d86097dc93df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import silhouette_samples, silhouette_score\n",
-    "from sklearn.datasets import make_blobs\n",
-    "from matplotlib import pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "def plot(X,y):\n",
-    "    plt.scatter(X[:,0],X[:,1], c = y)\n",
-    "    plt.show()\n",
-    "    \n",
-    "X,y  = make_blobs(n_samples = 100, shuffle=False,centers = [(1,x*10) for x in range(2)])\n",
-    "\n",
-    "print(silhouette_score(X,y))\n",
-    "plot(X,y)\n",
-    "X[:25,1]+=20\n",
-    "print(silhouette_score(X,y))\n",
-    "plot(X,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a4db9e3a-1195-4915-aa2f-770a3fe16131",
+   "id": "4c6ac4d6-504c-4a54-85ba-2da4c5be49ea",
    "metadata": {},
    "outputs": [],
    "source": []
