--- a/notebooks/6_original_i_hope.ipynb
+++ b/notebooks/6_original_i_hope.ipynb
@@ -24,7 +24,8 @@
     "mpl.rc(\"figure\", dpi=100)\n",
     "import numpy as np\n",
     "import jack\n",
-    "from lmz import *"
+    "from lmz import *\n",
+    "import scanpy as sc"
    ]
   },
   {
@@ -33,9 +34,7 @@
    "id": "81b77873-9200-4d1b-9af1-1cbf06a618c9",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import scanpy as sc"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
