--- a/notebooks/10_pca.ipynb
+++ b/notebooks/10_pca.ipynb
@@ -98,14 +98,15 @@
     "import mnnpy\n",
     "import umap\n",
     "\n",
-    "def evalp(x,neighs=5,conns=1, scal=1,comp=5,umaps = 0,outl = .75, scalecon = .25):\n",
+    "    \n",
+    "def evalp(  x =None,neighs=5,conns=1, scal=1,comp=5,umaps = 0,outl = .75, scalecon = .25, pca = 40):\n",
     "    batch_,label = batch[x], typ[x]\n",
     "    data = [z.copy() for z in ssdata[x]]\n",
     "    if umaps == 0:\n",
-    "        merge = merg.Merge(data,umaps=[],oldcut=False, pca = 40)\n",
+    "        merge = merg.Merge(data,umaps=[],oldcut=False, pca = pca)\n",
     "        data = merge.projections[1]\n",
     "    else:\n",
-    "        merge = merg.Merge(data,umaps=[umaps],oldcut=False, pca  = 40)\n",
+    "        merge = merg.Merge(data,umaps=[umaps],oldcut=False, pca  = pca)\n",
     "        data = merge.projections[2]\n",
     "    dist = kernel.linear_assignment_integrate(data,\n",
     "                                              intra_neigh = neighs, \n",
@@ -118,46 +119,19 @@
     "    score = nnpurity(sim,y)+2*silhouette_score(sim,y)\n",
     "    return score\n",
     "\n",
-    "def runall(params):\n",
-    "    return -np.mean(ug.xmap(lambda x:evalp(x,**params),Range(ssdata)))\n",
-    "                    \n",
-    "from hyperopt import fmin, tpe, hp, Trials\n",
-    "from hyperopt.pyll import scope\n",
     "\n",
-    "space = { \n",
-    "    'neighs' : scope.int(hp.quniform('neighs',3,25,1)),\n",
-    "    'conns' : scope.int(hp.quniform('conns',1,5,1)),\n",
-    "    'scal' : scope.int(hp.quniform('scal',1,5,1)),\n",
-    "    'comp' : scope.int(hp.quniform('comp',4,30,1)),\n",
-    "    'umaps' : scope.int(hp.quniform('umaps',0,20,5))}\n",
+    "def eva(z):\n",
+    "    score  = evalp(**z)\n",
+    "    z['score'] = score\n",
+    "    return z\n",
     "\n",
-    "space2 = { \n",
-    "    'neighs' : 20,\n",
-    "    'conns' : 2,\n",
-    "    'scal' : 4,\n",
-    "    'comp' : 19,\n",
-    "    'umaps' : 20,\n",
-    "    'scalecon' : hp.uniform('scalecon',.05,.95),\n",
-    "    'outl' : hp.uniform('outl',.5,.95)\n",
-    "}\n",
     "\n",
-    "space3 = { \n",
-    "    'neighs' : scope.int(hp.quniform('neighs',3,25,1)),\n",
-    "    'conns' : scope.int(hp.quniform('conns',1,5,1)),\n",
-    "    'scal' : scope.int(hp.quniform('scal',1,5,1)),\n",
-    "    'comp' : scope.int(hp.quniform('comp',4,30,1)),\n",
-    "    'umaps' : scope.int(hp.quniform('umaps',0,20,5)),\n",
-    "    'scalecon' : hp.uniform('scalecon',.05,.95),\n",
-    "    'outl' : hp.uniform('outl',.5,.95)\n",
-    "}\n",
     "\n",
-    "# {'comp': 9.0, 'conns': 1.0, 'neighs': 16.0, 'outl': 0.8079195869285946, 'scal': 2.0, 'scalecon': 0.9365341951145691, 'umaps': 0.0}\n",
-    "trials3 = Trials()\n",
-    "best = fmin(fn=runall, algo=tpe.suggest,\n",
-    "            trials = trials3,\n",
-    "            space = space3, \n",
-    "            max_evals=40) \n",
-    "print(best)"
+    "\n",
+    "\n",
+    "re = ug.xmap(eva,[{'comp': 9, 'conns': 1, 'neighs': 16, 'outl': 0.8079195869285946, 'scal': 2, 'scalecon': 0.9365341951145691, 'umaps': 0.0, 'pca' : pca, 'x':x} \n",
+    "               for pca in Range(20,60,2) for x in Range(ssdata)] )\n",
+    "\n"
    ]
   },
   {
@@ -165,9 +139,7 @@
    "id": "889f9556-cbb8-418e-b60a-88d522dc3d9d",
    "metadata": {},
    "source": [
-    "# optimize projection\n",
-    "\n",
-    "umap is very slow lets see what good alternatives are"
+    "import "
    ]
   },
   {
