adding similarity to merge object

--- a/notebooks/10_pca.ipynb
+++ b/notebooks/10_pca.ipynb
@@ -83,6 +83,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bd5871b0-f012-4d2f-ba4a-835f20d4ba63",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dbe03e3-b2d7-4a0e-8d35-72d6e9247dc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merge.similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f6d6af76-c49a-4a5c-b5a4-62d6bb76479f",
    "metadata": {
     "tags": []
@@ -99,7 +117,7 @@
     "import umap\n",
     "\n",
     "    \n",
-    "def evalp(  x =None,neighs=5,conns=1, scal=1,comp=5,umaps = 0,outl = .75, scalecon = .25, pca = 40):\n",
+    "def evalp(  x =None,neighs=5,conns=1, scal=1,comp=5,umaps = 0,outl = .75, scalecon = .25, pca = 40, test_neighs = 0):\n",
     "    batch_,label = batch[x], typ[x]\n",
     "    data = [z.copy() for z in ssdata[x]]\n",
     "    if umaps == 0:\n",
@@ -114,7 +132,7 @@
     "                                              scaling_num_neighbors = scal,\n",
     "                                               outlier_threshold = outl,\n",
     "                                               scaling_threshold = scalecon)\n",
-    "    sim = kernel.distmatrixumap(data,dist,components = comp)\n",
+    "    sim = kernel.distmatrixumap(data,dist,components = comp, n_neighbors=test_neighs)\n",
     "    y = [ x for a in merge.data for x in a.obs[label] ]\n",
     "    score = nnpurity(sim,y)+2*silhouette_score(sim,y)\n",
     "    return score\n",
@@ -127,20 +145,52 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "re = ug.xmap(eva,[{'comp': 9, 'conns': 1, 'neighs': 16, 'outl': 0.8079195869285946, 'scal': 2, 'scalecon': 0.9365341951145691, 'umaps': 0.0, 'pca' : pca, 'x':x} \n",
-    "               for pca in Range(20,60,2) for x in Range(ssdata)] )\n",
+    "re = ug.xmap(eva,[{'comp': 9, 'conns': 1, 'neighs': 16, 'outl': 0.8079195869285946, 'scal': 2,\n",
+    "                   'scalecon': 0.9365341951145691, 'umaps': 0.0, 'pca' : 40, 'x':x} \n",
+    "               for nei in Range(10,43,3) for x in Range(ssdata)] )\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8469cb20-2d6b-4822-9e3b-69086a133d05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c0af907-520f-49a2-a042-7353e1fde96b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "data = pd.DataFrame(re)\n",
+    "interest = 'test_neighs'\n",
+    "sns.boxplot(data = data, x = interest, y= 'score')\n",
+    "plt.show()\n",
+    "sns.scatterplot(data = data, x = interest, y= 'score')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ec1d80d-8312-471e-be86-4f67971793e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "889f9556-cbb8-418e-b60a-88d522dc3d9d",
    "metadata": {},
-   "source": [
-    "import "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
