--- a/notebooks/10_pca.ipynb
+++ b/notebooks/10_pca.ipynb
@@ -86,7 +86,31 @@
    "id": "bd5871b0-f012-4d2f-ba4a-835f20d4ba63",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn import neighbors as nbrs\n",
+    "\n",
+    "\n",
+    "def neighborgraph(x, neighbors):\n",
+    "    z= nbrs.kneighbors_graph(x,neighbors)\n",
+    "    diff = z-z.T\n",
+    "    diff[diff > 0 ] = 0\n",
+    "    z-= diff\n",
+    "    return z\n",
+    "\n",
+    "def nnn(x, neighbors,near = True):\n",
+    "    z = np.zeros_like(x)\n",
+    "    np.fill_diagonal(x,np.NINF)\n",
+    "    for i,row in enumerate(x):\n",
+    "        sr = np.argsort(row)\n",
+    "        z[i][sr[-neighbors:]]  = 1\n",
+    "    diff = z-z.T\n",
+    "    diff[diff > 0 ] = 0\n",
+    "    z-= diff\n",
+    "    return z\n",
+    "\n",
+    "\n",
+    "nnn(merge.similarity,1)"
+   ]
   },
   {
    "cell_type": "code",
@@ -95,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge.similarity"
+    "nnn(-merge.similarity,1)"
    ]
   },
   {
@@ -117,7 +141,7 @@
     "import umap\n",
     "\n",
     "    \n",
-    "def evalp(  x =None,neighs=5,conns=1, scal=1,comp=5,umaps = 0,outl = .75, scalecon = .25, pca = 40, test_neighs = 0):\n",
+    "def evalp(  x =None,neighs=5,conns=1, scal=1,comp=5,umaps = 0,outl = .75, scalecon = .25, pca = 40, connect = 100,nalg = 0):\n",
     "    batch_,label = batch[x], typ[x]\n",
     "    data = [z.copy() for z in ssdata[x]]\n",
     "    if umaps == 0:\n",
@@ -130,25 +154,35 @@
     "                                              intra_neigh = neighs, \n",
     "                                              inter_neigh = conns, \n",
     "                                              scaling_num_neighbors = scal,\n",
-    "                                               outlier_threshold = outl,\n",
-    "                                               scaling_threshold = scalecon)\n",
-    "    sim = kernel.distmatrixumap(data,dist,components = comp, n_neighbors=test_neighs)\n",
+    "                                              outlier_threshold = outl,\n",
+    "                                              scaling_threshold = scalecon,\n",
+    "                                              dataset_similarity = (merge.similarity, connect, nalg))\n",
+    "    sim = kernel.distmatrixumap(data,dist,components = comp)\n",
     "    y = [ x for a in merge.data for x in a.obs[label] ]\n",
     "    score = nnpurity(sim,y)+2*silhouette_score(sim,y)\n",
     "    return score\n",
-    "\n",
     "\n",
     "def eva(z):\n",
     "    score  = evalp(**z)\n",
     "    z['score'] = score\n",
     "    return z\n",
     "\n",
-    "\n",
-    "\n",
     "re = ug.xmap(eva,[{'comp': 9, 'conns': 1, 'neighs': 16, 'outl': 0.8079195869285946, 'scal': 2,\n",
-    "                   'scalecon': 0.9365341951145691, 'umaps': 0.0, 'pca' : 40, 'x':x} \n",
-    "               for nei in Range(10,43,3) for x in Range(ssdata)] )\n",
+    "                   'scalecon': 0.9365341951145691, 'umaps': 0.0, 'pca' : 40, 'x':x, 'connect':asd, 'nalg': nalg} \n",
+    "               for asd in Range(100,9,-10) for x in Range(ssdata) for nalg in [True,False]] )\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0bc2666-33a8-4f34-9286-697a19fd1271",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "re"
    ]
   },
   {
@@ -158,7 +192,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data"
+    "asd = Map(len, ssdata)\n",
+    "for d in re:\n",
+    "    d['connect2']= d['connect'] * asd[d['x']]"
    ]
   },
   {
@@ -171,11 +207,11 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "data = pd.DataFrame(re)\n",
-    "interest = 'test_neighs'\n",
+    "interest = 'connect'\n",
     "sns.boxplot(data = data, x = interest, y= 'score')\n",
     "plt.show()\n",
-    "sns.scatterplot(data = data, x = interest, y= 'score')\n",
-    "plt.show()"
+    "sns.scatterplot(data = data, x = interest, y= 'score', hue = 'x')\n",
+    "plt.show() # was around .9 at best withthe other neighbor function.."
    ]
   },
   {
